# bachelor-thesis

./: .gitignore  README.md
.claude/: launch.json
implementation/: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
implementation/.claude/: launch.json
implementation/briefs/: loctite.yaml  persil.yaml  schwarzkopf.yaml
implementation/docs/: architecture.md  conventions.md  decisions.md  design-rationale.md  design.md  how-to.md  ui-method.md
implementation/docs/.ai/: architecture.md  conventions.md  decisions.md  design-rationale.md  ui-method.md
implementation/src/grain/: config.py
implementation/src/grain/agents/: messages.py  roles.py
implementation/src/grain/api/: analysis.py  app.py  deps.py  review.py  runs.py
implementation/src/grain/domain/: brief.py  platforms.py  topology.py
implementation/src/grain/harness/: executor.py  jobs.py  seeds.py  trace.py
implementation/src/grain/metrics/: compute.py  judging.py  latency.py  set_coherence.py  spec.py  tax.py  viescore.py
implementation/src/grain/providers/: base.py  registry.py
implementation/src/grain/review/: plan.py  sessions.py
implementation/src/grain/store/: db.py  jobs.py  maintenance.py  review.py  runs.py  schema.sql
implementation/src/grain/topologies/: coarse.py  execution.py  fine.py  independent.py  monolithic.py  prompts.py  proxy.py  stopping.py
implementation/tests/: conftest.py  test_api.py  test_concept_invariants.py  test_latency_and_proxy.py  test_render_and_spec.py  test_review_and_analysis.py  test_stats.py
(+74 files in other folders)
