[project]
name = "grain"
version = "0.1.0"
description = "Experiment harness and evaluation platform for the task-granularity thesis"
requires-python = ">=3.12,<3.16"
dependencies = [
    "fastapi (>=0.115)",
    "uvicorn (>=0.30)",
    "pillow (>=11.0)",
    "pytesseract (>=0.3.13)",
    "pyyaml (>=6.0)",
]

[tool.poetry]
packages = [{ include = "grain", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx2 = ">=2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
